fix: 🐛 Observer, post list align

--- a/components/styles/Post.module.scss
+++ b/components/styles/Post.module.scss
@@ -12,6 +12,9 @@ $gap: 8px;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  &.alignLeft {
+    justify-content: flex-start;
+  }
   margin-right: -$gap;
   .verticalItem {
     margin-right: $gap;
